examples/kju/positive/functions/function_used_before_declaration.kju
fun write(a: Int): Unit import

fun kju():Unit{
	var x:Int=f();
	write(x);
}

fun f():Int{
	return 5;
}