examples/kju/negative/variable_name_same_as_parameter.kju
fun f(a: Int): Unit {
	var a: Int = 5;
}

fun kju(): Unit {}
